added docker deployment

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -6,7 +6,7 @@
 <body>
     <div>
          <p>
-            This is a test. From inside a container.
+            This is a test. From inside a container. And uses pipeline2.
          </p>
     </div>
 </body>
