--- a/web/static/index.html
+++ b/web/static/index.html
@@ -7,6 +7,7 @@
     <div>
          <p>
             This is a test. From inside a container. And uses pipeline2.
+            Which of course is CI/CD.
          </p>
     </div>
 </body>
