added line breaks

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -6,7 +6,8 @@
 <body>
     <div>
          <p>
-            This is a test. From inside a container. And uses pipeline2.
+            This is a test. From inside a container. <br>
+            And uses pipeline2. <br>
             Which of course is CI/CD.
          </p>
     </div>
