--- a/web/static/index.html
+++ b/web/static/index.html
@@ -8,7 +8,7 @@
          <p>
             This is a test. From inside a container. <br>
             And uses pipeline2. <br>
-            Which of course is CI/CD.
+            Which of course is CI/CD and fully automated
          </p>
     </div>
 </body>
