changed index page

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -8,7 +8,9 @@
          <p>
             This is a test. From inside a container. <br>
             And uses pipeline2. <br>
-            Which of course is CI/CD and fully automated
+            Which of course is CI/CD and fully automated. <br>
+            <br>
+            More lines added.
          </p>
     </div>
 </body>
